# e310x

./: Cargo.toml  device.x  e310x.svd  riscv_config.yaml  svd2rust.toml  update.sh
src/: clint.rs  generic.rs  interrupt.rs  lib.rs  pac.rs  plic.rs
