[package]
name = "e310x"
version = "0.11.0"
edition = "2021"
repository = "https://github.com/riscv-rust/e310x"
authors = ["David Craven <david@craven.ch>", "The RISC-V Team <risc-v@teams.rust-embedded.org>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "With svd2rust generated peripherals for Freedom E310 MCU's."
keywords = ["riscv", "register", "peripheral"]
license = "ISC"
rust-version = "1.61"

[dependencies]
critical-section = { version = "1.1.1", optional = true }
riscv = { git = "https://github.com/rust-embedded/riscv", branch = "riscv-pac-only" } # TODO use crates.io
riscv-peripheral = { git = "https://github.com/rust-embedded/riscv", branch = "riscv-pac-only" } # TODO use crates.io
riscv-rt = { git = "https://github.com/rust-embedded/riscv", branch = "riscv-pac-only", optional = true } # TODO use crates.io
vcell = "0.1.3"

[features]
rt = ["riscv-rt"]
v-trap = ["rt", "riscv-rt/v-trap"]
g002 = []

[package.metadata.docs.rs]
features = ["rt", "g002", "critical-section"]
